--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -1,4 +1,8 @@
 ﻿@using apb97.github.io.WebSudoku.Shared
+
+@implements IDisposable
+@inject StringLocalizer<NavMenu> Loc
+
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://apb97.github.io">APB97</a>
@@ -29,7 +33,7 @@
     <nav class="d-flex flex-column flex-grow-1">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rules" Match="NavLinkMatch.All">
-                Sudoku Rules
+                @Loc["Sudoku Rules"]
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -39,14 +43,14 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="printMultiple">
-                Print Multiple
+                @Loc["Print Multiple"]
             </NavLink>
         </div>
 
         <div class="flex-grow-1" />
 
         <div class="nav-item px-3">
-            <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
+            <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">@Loc["Code"]</a>
         </div>
 
         <div class="nav-item px-3">
@@ -65,6 +69,17 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
+    protected override bool ShouldRender()
+    {
+        return Loc.IsReady;
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        MainLayout.OnStateChanging += LoadResourcesAsync;
+        await Loc.InitializeAsync(LanguageSelect.Culture);
+    }
+
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
@@ -74,5 +89,16 @@
     {
         collapseNavMenu = true;
         StateHasChanged();
+    }
+
+    private async Task LoadResourcesAsync()
+    {
+        await Loc.InitializeAsync(LanguageSelect.Culture);
+        StateHasChanged();
+    }
+
+    void IDisposable.Dispose()
+    {
+        MainLayout.OnStateChanging -= LoadResourcesAsync;
     }
 }
