--- a/WebSudoku/Layout/NavMenu.razor.css
+++ b/WebSudoku/Layout/NavMenu.razor.css
@@ -53,6 +53,10 @@
     color: white;
 }
 
+.collapse {
+    display: none !important;
+}
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
@@ -64,7 +68,7 @@
 
     .collapse {
         /* Never collapse the sidebar for wide screens */
-        display: block;
+        display: flex !important;
     }
     
     .nav-scrollable {
