--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@using apb97.github.io.WebSudoku.Shared
+﻿@using apb97.github.io.WebSudoku.Services.Dimensions
+@using apb97.github.io.WebSudoku.Shared
 
 @implements IDisposable
 @inject StringLocalizer<NavMenu> Loc
@@ -20,9 +21,11 @@
                 </div>
             }
         </button>
-        <div class="navbar-language-select">
-            <LanguageSelect />
-        </div>
+        <HiddenForScreenWidth HideForWidthCondition="width => width > ScreenBreakpoints.Medium">
+            <div class="navbar-language-select">
+                <LanguageSelect @ref="language" />
+            </div>
+        </HiddenForScreenWidth>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +41,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sudoku">
-                Sudoku
+                @Loc["Sudoku"]
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -53,11 +56,13 @@
             <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">@Loc["Code"]</a>
         </div>
 
-        <div class="nav-item px-3">
-            <div class="nav-link">
-                <LanguageSelect />
+        <HiddenForScreenWidth HideForWidthCondition="width => width <= ScreenBreakpoints.Medium">
+            <div class="nav-item px-3">
+                <div class="nav-link">
+                    <LanguageSelect @ref="language" />
+                </div>
             </div>
-        </div>
+        </HiddenForScreenWidth>
     </nav>
 </div>
 
@@ -69,6 +74,10 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
+    private LanguageSelect? language;
+
+    public string? Culture => language?.Culture;
+
     protected override bool ShouldRender()
     {
         return Loc.IsReady;
@@ -76,8 +85,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        MainLayout.OnStateChanging += LoadResourcesAsync;
-        await Loc.InitializeAsync(LanguageSelect.Culture);
+        Layout.OnStateChanging += LoadResourcesAsync;
+        await Loc.InitializeAsync(Culture);
     }
 
     private void ToggleNavMenu()
@@ -93,12 +102,12 @@
 
     private async Task LoadResourcesAsync()
     {
-        await Loc.InitializeAsync(LanguageSelect.Culture);
+        await Loc.InitializeAsync(Culture);
         StateHasChanged();
     }
 
     void IDisposable.Dispose()
     {
-        MainLayout.OnStateChanging -= LoadResourcesAsync;
+        Layout.OnStateChanging -= LoadResourcesAsync;
     }
 }
