Remove one overload of StringLocalizer.InitializeAsync
Add ImportAsync in JSRuntimeExtensions

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -52,7 +52,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        utilitiesModule = await JS.InvokeAsync<IJSObjectReference>("import", JSModules.UtilitiesModule);
+        utilitiesModule = await JS.ImportAsync(JSModules.UtilitiesModule);
         var mode = await utilitiesModule.GetSettingAsync<string>("LayoutMode");
         if (mode is null) return;
         LayoutMode = mode;
