--- a/WebSudoku/Pages/PrintMultiple.razor
+++ b/WebSudoku/Pages/PrintMultiple.razor
@@ -90,7 +90,7 @@
     {
         Layout.OnStateChanging += LoadResourcesAsync;
         await Loc.InitializeAsync(Layout.Culture);
-        utilities = await JS.InvokeAsync<IJSObjectReference>("import", JSModules.UtilitiesModule);
+        utilities = await JS.ImportAsync(JSModules.UtilitiesModule);
         var setting = await utilities.GetSettingAsync<string>("printMultiple_boardWidthPercentage");
         if (!float.TryParse(setting, CultureInfo.InvariantCulture, out var result)) return;
         boardWidthPercentage = result;
