--- a/WebSudoku/Shared/HiddenForScreenWidth.razor
+++ b/WebSudoku/Shared/HiddenForScreenWidth.razor
@@ -23,7 +23,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        module = await JS.InvokeAsync<IJSObjectReference>("import", "./Shared/HiddenForScreenWidth.razor.js");
+        module = await JS.ImportAsync("./Shared/HiddenForScreenWidth.razor.js");
         if (module is null) throw new Exception($"Cannot import module in {GetType().FullName}");
         var dimensions =  await module.InvokeAsync<WindowDimensions>("getDimensions");
         dotNetReference = DotNetObjectReference.Create(this);
