--- a/WebSudoku/Pages/PrintMultiple.razor
+++ b/WebSudoku/Pages/PrintMultiple.razor
@@ -18,19 +18,29 @@
     <PageTitle>Web Sudoku - @Loc["print multiple"]</PageTitle>
 
     <div class="d-print-none">
-        <button class="btn btn-danger" @onclick="boards.Clear">@Loc["Clear all"]</button>
-        <label for="width">@Loc["Board width"] [%]</label>
-        <InputSelect id="width" TValue="float" Value="boardWidthPercentage" ValueExpression="() => boardWidthPercentage" ValueChanged="UpdateBoardWidth">
-            <option value="33.3333">33%</option>
-            <option value="50">50%</option>
-            <option value="100">100%</option>
-        </InputSelect>
-        <label for="boards-amount">@Loc["Boards to generate"]</label>
-        <InputNumber id="boards-amount" min="1" max="32" @bind-Value="BoardsToGenerate" />
-        <label title="@Loc["Speeds up the process but"]" for="use-more-resources">@Loc["Use more resources"]</label>
-        <InputCheckbox id="use-more-resources" @bind-Value="useMoreResources" />
-        <button disabled="@(generating ? "disabled" : null)" class="btn btn-primary" @onclick="GenerateBoards">@Loc["Add"] @boardsToGenerate @Loc["sudoku(s)"]</button>
-        <button class="btn btn-secondary" onclick="print()">@Loc["Print"]</button>
+        <div class="d-flex flex-wrap">
+            <div class="align-content-center">
+                <label for="width">@Loc["Board width"] [%]</label>
+                <InputSelect id="width" TValue="float" Value="boardWidthPercentage" ValueExpression="() => boardWidthPercentage" ValueChanged="UpdateBoardWidth">
+                    <option value="33.3333">33%</option>
+                    <option value="50">50%</option>
+                    <option value="100">100%</option>
+                </InputSelect>
+            </div>
+            <div class="align-content-center">
+                <label for="boards-amount">@Loc["Boards to generate"]</label>
+                <InputNumber style="width: 4rem" id="boards-amount" min="1" max="32" @bind-Value="BoardsToGenerate" />
+            </div>
+            <div class="align-content-center">
+                <label title="@Loc["Speeds up the process but"]" for="use-more-resources">@Loc["Use more resources"]</label>
+                <InputCheckbox id="use-more-resources" Value="useMoreResources" ValueExpression="() => useMoreResources" ValueChanged="UpdateUseMoreResources" />
+            </div>
+            <div class="align-content-center">
+                <button class="btn btn-danger" @onclick="boards.Clear">@Loc["Clear all"]</button>
+                <button disabled="@(generating ? "disabled" : null)" class="btn btn-primary" @onclick="GenerateBoards">@Loc["Add"] @boardsToGenerate @Loc["sudoku(s)"]</button>
+                <button class="btn btn-secondary" onclick="print()">@Loc["Print"]</button>
+            </div>
+        </div>
     </div>
 
     @if (generating)
@@ -44,7 +54,7 @@
     <div class="d-flex flex-wrap">
         @foreach (var board in boards)
         {
-            <div class="p-2" style="break-inside: avoid-page; width: @boardWidthPercentage.ToString(CultureInfo.InvariantCulture)%;">
+            <div class="p-2" style="break-inside: avoid-page; width: @boardWidthPercentage%;">
                 <table class="sudoku-table" style="border-spacing: 0px;">
                     @for (int r = 0; r < Board.BoardSize; r++)
                     {
@@ -65,7 +75,7 @@
                 </table>
                 <div class="d-print-none">
                     <button class="btn btn-danger" @onclick="() => boards.Remove(board)">@Loc["Remove board"]</button>
-                    <button class="btn btn-success" disabled="@(generating ? "disabled" : null)" @onclick="() => Regenerate(board)">@Loc["Regenerate board"]</button>
+                    <button class="btn btn-success" disabled="@(generating ? "disabled" : null)" @onclick="async () => await Regenerate(board)">@Loc["Regenerate board"]</button>
                 </div>
             </div>
         }
@@ -98,6 +108,14 @@
 
     private IJSObjectReference? utilities;
 
+    private const string PageName = "printMultiple";
+    private const string FormatSetting = "{0}_{1}";
+
+    private string SettingKeyFor(string settingName)
+    {
+        return string.Format(FormatSetting, PageName, settingName);
+    }
+
     protected override bool ShouldRender()
     {
         return Loc.IsReady;
@@ -108,16 +126,40 @@
         Layout.OnStateChanging += LoadResourcesAsync;
         await Loc.InitializeAsync(Layout.Culture);
         utilities = await JS.ImportAsync(JSModules.UtilitiesModule);
-        var setting = await utilities.GetSettingAsync<string>("printMultiple_boardWidthPercentage");
-        if (!float.TryParse(setting, CultureInfo.InvariantCulture, out var result)) return;
-        boardWidthPercentage = result;
+        if (utilities is null) return;
+
+        await LoadSettings(utilities);
+    }
+
+    private async ValueTask LoadSettings(IJSObjectReference utilities)
+    {
+        if (utilities is null) return;
+
+        var boardWidthSetting = await utilities.GetSettingAsync<string>(SettingKeyFor(nameof(boardWidthPercentage)));
+        if (float.TryParse(boardWidthSetting, out var result))
+            boardWidthPercentage = result;
+
+        var useMoreResourcesSetting = await utilities.GetSettingAsync<string>(SettingKeyFor(nameof(useMoreResources)));
+        if (bool.TryParse(useMoreResourcesSetting, out var useMoreResult))
+            useMoreResources = useMoreResult;
+
+        string boardAmountSetting = await utilities.GetSettingAsync<string>(SettingKeyFor(nameof(boardsToGenerate)));
+        if (int.TryParse(boardAmountSetting, out var boardAmountResult) && boardAmountResult > 0)
+            BoardsToGenerate = boardAmountResult;
     }
 
     private async Task UpdateBoardWidth(float width)
     {
         boardWidthPercentage = width;
         if (utilities is null) return;
-        await utilities.SetSettingAsync("printMultiple_boardWidthPercentage", width);
+        await utilities.SetSettingAsync(SettingKeyFor(nameof(boardWidthPercentage)), width);
+    }
+
+    private async Task UpdateUseMoreResources(bool use)
+    {
+        useMoreResources = use;
+        if (utilities is null) return;
+        await utilities.SetSettingAsync(SettingKeyFor(nameof(useMoreResources)), use);
     }
 
     private void Cancel()
@@ -131,39 +173,36 @@
 
     private async Task GenerateBoards(CancellationToken cancellationToken)
     {
-        generating = true;
+        try
         {
-            try
+            generating = true;
+            for (int i = 0; i < boardsToGenerate; i++)
             {
-                for (int i = 0; i< boardsToGenerate; i++)
-                {
-                    cancellationToken.ThrowIfCancellationRequested();
-                    generating = true;
-                    boards.Add(new Board(Solver, new RandomOptionOrder<int>(), Blanker, 40, 64));
-                    StateHasChanged();
-                    // makes UI responsive
-                    await Task.Delay(useMoreResources ? 1 : millisecondsDelay);
-                }
+                cancellationToken.ThrowIfCancellationRequested();
+                boards.Add(new Board(Solver, new RandomOptionOrder<int>(), Blanker, 40, 64));
+                StateHasChanged();
+                // makes UI responsive
+                await Task.Delay(useMoreResources ? 1 : millisecondsDelay);
             }
-            catch (OperationCanceledException)
+        }
+        catch (OperationCanceledException)
+        {
+            // don't do anything when cancelling
+        }
+        catch (Exception ex)
+        {
+            if (utilities is not null)
             {
-                // don't do anything when cancelling
+                await utilities.AlertAsync(ex.Message);
             }
-            catch (Exception ex)
-            {
-                if (utilities is not null)
-                {
-                    await utilities.AlertAsync(ex.Message);
-                }
-            }
-            finally
-            {
-                generating = false;
-            }
-        };
+        }
+        finally
+        {
+            generating = false;
+        }
     }
 
-    private async Task Regenerate(Board board)
+    private async ValueTask Regenerate(Board board)
     {
         if (generating) return;
         var index = boards.FindIndex(b => b == board);
@@ -198,6 +237,7 @@
         Layout.OnStateChanging -= LoadResourcesAsync;
         cts.Dispose();
         if (utilities is null) return;
+        await utilities.SetSettingAsync(SettingKeyFor(nameof(boardsToGenerate)), boardsToGenerate);
         await utilities.DisposeAsync();
     }
 }
