--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -6,29 +6,33 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://apb97.github.io">APB97</a>
-        <button style="border: none; background-color: transparent; padding: 0;" @onclick="() => Layout.ToggleLayoutMode()">
-            @if (Layout.LayoutMode == "Light")
-            {
-                <div onclick="localStorage.setItem('LayoutMode', 'Dark')">
-                    <img style="height: 2rem; filter: invert(0.95);" src="/images/dark.svg" />
+        <div class="d-flex">
+            <a class="navbar-brand" href="https://apb97.github.io">APB97</a>
+            <button style="border: none; background-color: transparent; padding: 0;" @onclick="() => Layout.ToggleLayoutMode()">
+                @if (Layout.LayoutMode == "Light")
+                {
+                    <div onclick="localStorage.setItem('LayoutMode', 'Dark')">
+                        <img style="height: 2rem; filter: invert(0.95);" src="/images/dark.svg" />
+                    </div>
+                }
+                else
+                {
+                    <div onclick="localStorage.setItem('LayoutMode', 'Light')">
+                        <img style="height: 2rem; filter: invert(0.95);" src="/images/light.svg" />
+                    </div>
+                }
+            </button>
+        </div>
+        <div class="d-flex">
+            <HiddenForScreenWidth HideForWidthCondition="width => width > ScreenBreakpoints.Medium">
+                <div class="navbar-language-select align-content-center">
+                    <LanguageSelect @ref="language" />
                 </div>
-            }
-            else
-            {
-                <div onclick="localStorage.setItem('LayoutMode', 'Light')">
-                    <img style="height: 2rem; filter: invert(0.95);" src="/images/light.svg" />
-                </div>
-            }
-        </button>
-        <HiddenForScreenWidth HideForWidthCondition="width => width > ScreenBreakpoints.Medium">
-            <div class="navbar-language-select">
-                <LanguageSelect @ref="language" />
-            </div>
-        </HiddenForScreenWidth>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            </HiddenForScreenWidth>
+            <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
     </div>
 </div>
 
