Update layout and CSS

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -26,7 +26,7 @@
 
 <CascadingValue Value="this">
     <div class="page">
-        <div class="sidebar d-print-none d-flex flex-column position-sticky top-0">
+        <div class="sidebar d-print-none d-flex position-sticky top-0">
             <NavMenu @ref="navMenu" />
         </div>
 
