--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -4,31 +4,33 @@
 @implements IDisposable
 @inject StringLocalizer<NavMenu> Loc
 
-<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <div class="d-flex">
-            <a class="navbar-brand" href="https://apb97.github.io">APB97</a>
+<div class="top-row ps-3 navbar navbar-dark w-100">
+    <div class="container-fluid align-items-stretch">
+        <div class="d-flex w-100-50">
+            <a class="navbar-brand align-content-center" href="https://apb97.github.io">APB97</a>
+            <div class="flex-grow-1"></div>
             <button style="border: none; background-color: transparent; padding: 0;" @onclick="() => Layout.ToggleLayoutMode()">
                 @if (Layout.LayoutMode == "Light")
                 {
-                    <div onclick="localStorage.setItem('LayoutMode', 'Dark')">
+                    <div style="width: 56px;" onclick="localStorage.setItem('LayoutMode', 'Dark')">
                         <img style="height: 2rem; filter: invert(0.95);" src="/images/dark.svg" />
                     </div>
                 }
                 else
                 {
-                    <div onclick="localStorage.setItem('LayoutMode', 'Light')">
+                    <div style="width: 56px;" onclick="localStorage.setItem('LayoutMode', 'Light')">
                         <img style="height: 2rem; filter: invert(0.95);" src="/images/light.svg" />
                     </div>
                 }
             </button>
         </div>
-        <div class="d-flex">
+        <div class="d-flex w-100-50">
             <HiddenForScreenWidth HideForWidthCondition="width => width > ScreenBreakpoints.Medium">
                 <div class="navbar-language-select align-content-center">
                     <LanguageSelect @ref="language" />
                 </div>
             </HiddenForScreenWidth>
+            <div class="flex-grow-1"></div>
             <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
