--- a/WebSudoku.styles.css
+++ b/WebSudoku.styles.css
@@ -15,6 +15,7 @@ main[b-834vkyk4rs] {
 
 .sidebar[b-834vkyk4rs] {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    flex-direction: column !important;
 }
 
 .top-row[b-834vkyk4rs] {
@@ -85,7 +86,35 @@ main[b-834vkyk4rs] {
 }
 
 .top-row[b-z3xvy1gwk2] {
+    height: 6rem;
     background-color: rgba(0,0,0,0.4);
+    display: flex;
+    align-content: center;
+    justify-content: flex-end;
+}
+
+.w-100-50[b-z3xvy1gwk2] {
+    width: 100%;
+}
+
+.container-fluid[b-z3xvy1gwk2] {
+    flex-direction: column;
+    width: 100%;
+}
+
+@media (min-width: 400px) {
+    .top-row[b-z3xvy1gwk2] {
+        height: 3.5rem;
+    }
+
+    .w-100-50[b-z3xvy1gwk2] {
+        width: unset;
+    }
+
+    .container-fluid[b-z3xvy1gwk2] {
+        flex-direction: row;
+        width: 100%;
+    }
 }
 
 .navbar-brand[b-z3xvy1gwk2] {
@@ -139,6 +168,10 @@ main[b-834vkyk4rs] {
 }
 
 @media (min-width: 641px) {
+    .w-100-50[b-z3xvy1gwk2] {
+        width: 100%;
+    }
+
     .navbar-toggler[b-z3xvy1gwk2] {
         display: none;
     }
